# Kokoro-AI-Workflow-Engine

./: README.md  main.py  pyproject.toml
ai/: kokoro.py  llama_cpp.py  llm.py  prompts.py  schemas.py
cli/: commands.py
core/: engine.py  executor.py  interfaces.py  registry.py  state.py
steps/: analyze_logs.py  base.py  generate_report.py  read_file.py  speak.py  summarize.py
storage/: database.py  hash_utils.py  models.py  repository.py
tests/: test_cache.py  test_engine.py  test_speech.py  test_steps.py
workflows/: analyze_logs.yaml  speak_summary.yaml  summarize.yaml
