[project]
name = "kokoro-ai-workflow-engine"
version = "0.1.0"
description = "Local Jarvis workflow engine using llama.cpp, Kokoro, PostgreSQL, Typer, and Rich."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["llama-cpp-python>=0.2.90"]
tts = ["kokoro>=0.9.0", "numpy>=1.26", "soundfile>=0.12"]
local = [
    "llama-cpp-python>=0.2.90",
    "kokoro>=0.9.0",
    "numpy>=1.26",
    "soundfile>=0.12",
]

[project.scripts]
jarvis = "cli.commands:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
